codex-rs/rmcp-client/src/snapshots/codex_rmcp_client__oauth_callback_page__tests__oauth_callback_error_codex_app.snap
---
source: rmcp-client/src/oauth_callback_page_tests.rs
expression: page
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="color-scheme" content="light dark" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>Connection not completed</title>
    <style>
      :root { --background: #ffffff; --surface: #f7f7f7; --text: #0d0d0d; --secondary: #5d5d5d; --border: rgb(13 13 13 / 10%); --button: #0d0d0d; --button-text: #ffffff; --error: #c0362c; font-family: "SF Pro", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; color: var(--text); background: var(--background); }
      @media (prefers-color-scheme: dark) { :root { --background: #181818; --surface: rgb(255 255 255 / 5%); --text: #ffffff; --secondary: rgb(255 255 255 / 65%); --border: rgb(255 255 255 / 10%); --button: #ffffff; --button-text: #0d0d0d; --error: #ff8a80; } }
      * { box-sizing: border-box; }
      body { margin: 0; min-height: 100vh; background: var(--background); }
      .wordmark { position: fixed; inset: 20px auto auto 20px; font-size: 21px; font-weight: 650; letter-spacing: -0.45px; line-height: 24px; }
      main { min-height: 100vh; display: grid; place-items: center; padding: 72px 24px 48px; }
      .panel { width: min(100%, 480px); display: flex; flex-direction: column; align-items: center; gap: 16px; text-align: center; }
      .status-mark { width: 48px; height: 48px; display: grid; place-items: center; border: 1px solid var(--border); border-radius: 50%; background: var(--surface); color: var(--error); font-size: 26px; line-height: 1; }
      h1 { margin: 8px 0 0; font-size: 24px; font-weight: 600; letter-spacing: -0.45px; line-height: 32px; }
      .message { max-width: 380px; margin: 0; color: var(--secondary); font-size: 14px; line-height: 20px; }
      .button { min-height: 40px; display: none; align-items: center; justify-content: center; margin-top: 8px; border: 1px solid var(--button); border-radius: 999px; background: var(--button); color: var(--button-text); font: inherit; font-size: 14px; font-weight: 560; line-height: 20px; padding: 9px 18px; text-decoration: none; }
      body[data-return-to-app="true"] .button { display: inline-flex; }
      .button:focus-visible { outline: 2px solid var(--text); outline-offset: 3px; }
    </style>
  </head>
  <body data-return-to-app="true">
    <div class="wordmark" aria-label="Codex">Codex</div>
    <main>
      <section class="panel" aria-labelledby="error-title">
        <div class="status-mark" aria-hidden="true">!</div>
        <h1 id="error-title">Connection not completed</h1>
        <p class="message">Codex couldn&rsquo;t finish this connection. Return to Codex and try again.</p>
        <a class="button" href="codex://settings/connections">Return to Codex</a>
      </section>
    </main>
    <script>window.history.replaceState(null, "", window.location.pathname);</script>
  </body>
</html>
